ID refactor and off by one